Revature Coursework/W8/expensemanifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense
  template:
    metadata:
      labels:
        app: expense
    spec:
      containers:
      - name: expense
        image: expense-report:two-stage
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: expense-service
spec:
  selector:
    app: expense
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
